# ordeRS

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
.cargo/: config.toml
api/: openapi.yaml
app/: Cargo.toml
app/src/: domain.rs  main.rs
app/src/adapters/: rest.rs
app/src/adapters/rest/: book_handler.rs  domain_mappers.rs  mapper.rs  mapper_errors.rs  rest_mappers.rs  server.rs
app/src/domain/: book_service.rs  error.rs  models.rs  order_service.rs  store.rs
db/migrations/: 000_init_schema.sql
openapi/: Cargo.toml  README.md
openapi/.openapi-generator/: FILES
openapi/src/: lib.rs  models.rs
openapi/src/apis/: author.rs  book.rs  discount.rs  genre.rs  health.rs  mod.rs  store.rs
openapi/src/server/: mod.rs
probe/: Cargo.toml
probe/src/: main.rs
src/adapters/rest/models/: address.rs  author.rs  author_properties.rs  book.rs  book_properties.rs  discount_code.rs  discount_code_properties.rs  genre.rs  inventory.rs  new_author.rs  new_book.rs  new_discount_code.rs  new_order.rs  order.rs  order_properties.rs
